--- a/css/jabir.css
+++ b/css/jabir.css
@@ -144,6 +144,30 @@ ul {
 }
 
 /* endGlobal root */
+
+/* up scorol Start */
+.up {
+    position: fixed;
+    bottom: 10px;
+    right: -30px;
+    color: var(--main-color-alt);
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 6px;
+    border-radius: 5px;
+    font-family: arial, Tahoma;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.up.show {
+    right: 10px;
+    z-index: 999;
+}
+
+/* up scorol End */
+
 /* Header start  */
 .header {
     background-color: white;
@@ -1002,6 +1026,7 @@ ul {
     top: 0;
     height: 100%;
     background-color: var(--main-color);
+    transition: width 0.3s linear;
 }
 
 /* end skills */
@@ -1149,7 +1174,7 @@ ul {
 
 .events .info .time .unit span:first-child {
     font-size: 35px;
-    padding: 15px;
+    padding: 15px 8px;
     color: var(--main-color);
     font-weight: bold;
 }
